--- a/assets/css/style-rtl.css
+++ b/assets/css/style-rtl.css
@@ -1,11 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Amiri:wght@700&display=swap');
 
-h1,h2,h3,h4,h5,h6,li,a{
+h1,h2,h3,h4,h5,h6,li,a,p{
     font-family: 'Amiri', serif  !important;
-}
-.text-right{
-    text-align: right !important;
-}
-.text-left{
-    text-align: left !important;
 }
